kubernetes/apps/monitoring-system/grafana/cluster/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.noirprime.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name grafana-service
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: grafana.svg
    gethomepage.dev/name: Grafana
    gethomepage.dev/group: Observability
spec:
  hostnames: ["grafana.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: networking-system

  rules:
    - backendRefs:
        - name: *name
          port: 3000
